Added functionality for creating new user

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,7 +9,7 @@
 Log in:
 <form action="" method="post" name="login">
     {{ form.hidden_tag() }}
-    Username: {{ form.username(size=80) }}
+    Username: {{ form.username(size=80) }} <br>
     Password: {{ form.password(size=80) }}
     <input type="submit" id="submit" value="Log in">
 </form>
