--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -14,6 +14,7 @@
 | <a href="{{ url_for('logout') }}">Logout</a>
 {% else %}
 | <a href="{{ url_for('login') }}">Log In</a>
+| <a href="{{ url_for('register') }}">Register</a>
 {% endif %}
 </div>
 
