--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -11,6 +11,7 @@
 <div class="nav-links">
 <a href="{{ url_for('home') }}">Home</a>
 {% if g.user.is_authenticated() %}
+| <a href="{{ url_for('events') }}">View Events</a>
 | <a href="{{ url_for('logout') }}">Logout</a>
 {% else %}
 | <a href="{{ url_for('login') }}">Log In</a>
