--- a/app/templates/events.html
+++ b/app/templates/events.html
@@ -16,7 +16,7 @@
 Events:
 <ul id="event-list">
 {% for event in user.events %}
-<li><a href="{{ url_for('payments', event_id=event.id) }}">{{ event.name }}</a></li>
+<li><a href="{{ url_for('payments', event_id=event.id) }}" id="{{ event.name }}">{{ event.name }}</a></li>
 {% endfor %}
 </ul>
 
