--- a/app/templates/events.html
+++ b/app/templates/events.html
@@ -11,12 +11,15 @@
 <p style="color:red">{{ message }}</p>
 {% endif %}
 
+
 {% if user.events %}
 
 Events:
 <ul id="event-list">
 {% for event in user.events %}
-<li><a href="{{ url_for('payments', event_id=event.id) }}" id="{{ event.name }}">{{ event.name }}</a></li>
+<li><a href="{{ url_for('payments', event_id=event.id) }}" id="{{ event.name }}">{{ event.name }}</a>
+| <a href="{{ url_for('delete_event', event_id=event.id) }}" id="delete-{{ event.name }}">delete</a>
+</li>
 {% endfor %}
 </ul>
 
