--- a/app/templates/payments.html
+++ b/app/templates/payments.html
@@ -6,11 +6,20 @@
 
 {% block content %}
 
-<p>Payments:</p><br>
+<p>Payments:</p>
 {% if event.payments %}
 <ul id="payments">
 {% for payment in event.payments %}
-<li>{{ payment.payer }}: {{ '{0:0.2f}'.format(payment.amount) }}</li>
+<li>{{ payment.payer }}: {{ '{0:0.2f}'.format(payment.amount) }}
+| <a href="{{ url_for('delete_payment',event_id=event.id,payment_id=payment.id) }}"> delete </a>
+</li>
+{% endfor %}
+</ul>
+<br>
+<p>Who Owes Who:</p>
+<ul id="whooweswho">
+{% for payment in payment_list %}
+<li>{{ payment[0] }} owes {{ payment[1] }} {{ payment[2] }} dollars</li>
 {% endfor %}
 </ul>
 {% else %}
